--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/fr/index.html">
+<meta http-equiv="refresh" content="0; url=https://lbasil.github.io//fr/index.html">
